Modification pour tester : problem pour envoi des float status marche mais besoin de teste encore

--- a/app/src/main/res/layout/connectactivity.xml
+++ b/app/src/main/res/layout/connectactivity.xml
@@ -28,5 +28,19 @@
             android:layout_height="wrap_content"
             android:layout_weight="0"
             android:text="conect" />
+
+        <Button
+            android:id="@+id/changename"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:text="Change Name" />
+
+        <Button
+            android:id="@+id/coords"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:text="Coords" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
