Modification pour tester : problem pour envoi des float status marche mais besoin de teste encore

--- a/app/src/main/res/layout/connectactivity.xml
+++ b/app/src/main/res/layout/connectactivity.xml
@@ -42,5 +42,18 @@
             android:layout_height="wrap_content"
             android:layout_weight="0"
             android:text="Coords" />
+        <Button
+            android:id="@+id/status"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:text="Stats" />
+        <Button
+            android:id="@+id/reinit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:text="Restart" />
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
